--- a/Contact.html
+++ b/Contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title> Quintessential | Travels </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     
  </head>
 
@@ -19,7 +20,7 @@
      
      <ul class="menu"> 
         <li><a href="index.html">Home</a></li>
-        <li><a href="About Us.html">About Us</a></li>
+        <li><a href="About-us.html">About Us</a></li>
         <li><a href="Gallery.html">Gallery</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
@@ -54,7 +55,7 @@
 
     <label for="subject">Subject</label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
+ <form action="thankyou.html">
     <input type="submit" value="Submit">
 
   </form>
