--- a/Gallery.html
+++ b/Gallery.html
@@ -17,7 +17,7 @@
      
      <ul class="menu"> 
         <li><a href="index.html">Home</a></li>
-        <li><a href="About Us.html">About Us</a></li>
+        <li><a href="About-us.html">About Us</a></li>
         <li><a href="Gallery.html">Gallery</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
